# aether

./: .gitignore  CLAUDE.md  LICENSE  README.md  dev.bat  dev.sh
.claude/: README.md  settings.json
.claude/commands/: milestone.md
.claude/rules/: backend-pipeline.md  backend.md  frontend-app.md  frontend-particle.md
.claude/skills/: SKILL.md
.claude/skills/reference/: tuning-knobs.md
backend/: .env.example  pyproject.toml
backend/data/demo/: manifest.json
backend/src/aether/: config.py  db.py  main.py  models.py
backend/src/aether.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/src/aether/api/: generate.py  jobs.py
backend/src/aether/pipeline/: llm.py  orchestrator.py  pointcloud.py  shapes.py  tts.py
backend/src/aether/prompts/: script_writer.txt
backend/tests/: conftest.py  test_llm_parser.py  test_orchestrator.py  test_pointcloud.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  store.ts  types.ts
frontend/src/components/: GenerationProgress.tsx  ParticleCanvas.tsx  PlaybackView.tsx  PromptInput.tsx  Subtitles.tsx
frontend/src/particle/: audioAnalyzer.ts  particleSystem.ts  renderer.ts
frontend/src/particle/shaders/: particle.frag.glsl  particle.vert.glsl
frontend/src/playback/: scheduler.ts
frontend/src/styles/: globals.css
plans/: eager-mapping-wall.md  mighty-sniffing-dream.md  quirky-yawning-pnueli.md  snoopy-enchanting-glacier.md  snuggly-skipping-crab.md  synthetic-sleeping-stearns.md  vectorized-rolling-locket.md
